# pcs_repositroy

esercitazione1/: CMakeLists.txt  intero_codice.cpp
